--- a/shop/public/css/style.css
+++ b/shop/public/css/style.css
@@ -42,6 +42,9 @@ footer {
     text-align: center;
     padding: 1rem;
     margin-top: 2rem;
+    position: absolute;
+    bottom: 0;
+    width: 100vw;
 }
 
 .form-box {
