--- a/shop/views/layout.ejs
+++ b/shop/views/layout.ejs
@@ -14,13 +14,13 @@
             <a href="/cart">장바구니</a>
             <% if (user) { %>
                 <span><%= user.username %>님</span>
-                <a href="/logout">로그아웃</a>
+                <a href="/user/logout">로그아웃</a>
                 <% if (user.isAdmin) { %>
                     <a href="/admin">관리자</a>
                 <% } %>
             <% } else { %>
-                <a href="/login">로그인</a>
-                <a href="/register">회원가입</a>
+                <a href="/user/login">로그인</a>
+                <a href="/user/register">회원가입</a>
             <% } %>
         </nav>
     </header>
