--- a/shop/views/login.ejs
+++ b/shop/views/login.ejs
@@ -1,8 +1,8 @@
 <% layout('layout') %>
 <h2>로그인</h2>
-<form action="/login" method="POST" class="form-box">
-    <label>아이디</label>
-    <input type="text" name="username" required placeholder="아이디를 입력하세요">
+<form action="/user/login" method="POST" class="form-box">
+    <label>이메일</label>
+    <input type="text" name="email" required placeholder="이메일을 입력하세요">
 
     <label>비밀번호</label>
     <input type="password" name="password" required placeholder="비밀번호를 입력하세요">
