--- a/shop/views/register.ejs
+++ b/shop/views/register.ejs
@@ -1,6 +1,6 @@
 <% layout('layout') %>
 <h2>회원가입</h2>
-<form action="/register" method="POST" class="form-box">
+<form action="/user/register" method="POST" class="form-box">
     <label>아이디</label>
     <input type="text" name="username" required placeholder="아이디를 입력하세요">
 
