--- a/shop/views/login.ejs
+++ b/shop/views/login.ejs
@@ -1,8 +1,11 @@
 <% layout('layout') %>
-<h2>로그인</h2>
+<h2 style="margin-bottom:1.5rem;">로그인</h2>
+<% if (typeof error !== 'undefined' && error) { %>
+    <div style="color:#d32f2f; margin-bottom:1rem; font-size:0.98rem;"> <%= error %> </div>
+<% } %>
 <form action="/user/login" method="POST" class="form-box">
-    <label>이메일</label>
-    <input type="text" name="email" required placeholder="이메일을 입력하세요">
+    <label>사용자명</label>
+    <input type="text" name="username" required placeholder="사용자명을 입력하세요">
 
     <label>비밀번호</label>
     <input type="password" name="password" required placeholder="비밀번호를 입력하세요">
